remove x ao lado do 3 pontos

--- a/TCC- Sistema Psicosoft/css/cancelar.css
+++ b/TCC- Sistema Psicosoft/css/cancelar.css
@@ -589,7 +589,7 @@ main {
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     cursor: pointer;
