--- a/TCC- Sistema Psicosoft/css/agendar.css
+++ b/TCC- Sistema Psicosoft/css/agendar.css
@@ -547,7 +547,7 @@ main {
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     cursor: pointer;
