--- a/TCC- Sistema Psicosoft/css/dashboard.css
+++ b/TCC- Sistema Psicosoft/css/dashboard.css
@@ -513,7 +513,7 @@ a { text-decoration: none; color: var(--primary); }
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     cursor: pointer;
