--- a/TCC- Sistema Psicosoft/css/reagendar.css
+++ b/TCC- Sistema Psicosoft/css/reagendar.css
@@ -681,7 +681,7 @@ hr.divider {
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     cursor: pointer;
